# datalad-fuse

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  asv.conf.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: benchmark.yml  docbuild.yml  lint.yml  release.yml  test-libfuse.yml  test.yml  test_crippledfs.yml  typing.yml
_datalad_buildsupport/: setup.py
benchmarks/: fuse.py
datalad_fuse/: __init__.py  _fusepy_patch.py  _version.py  adapter.py  backends.py  consts.py  fsspec.py  fsspec_cache_clear.py  fsspec_head.py  fuse.py  fuse_.py  remfile.py  utils.py
datalad_fuse/tests/: conftest.py  conftest_forgejo.py  test_backends.py  test_deprecations.py  test_exporttree.py  test_forgejo.py  test_fsspec_head.py  test_fuse.py  test_register.py  test_util.py
datalad_fuse/tests/data/: text.txt
doc/designs/: annex-p2p-urls.md
docs/designs/: 20260408-s3-exporttree-url-fallback.md
docs/source/: conf.py  index.rst
tools/: forgejo-repro.sh
