[build-system]
requires = ["setuptools >= 59.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,*.pdf,venvs,locale,.tox,versioneer.py,*.lock,*.css,data'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'gameboy'
