[metadata]
url = https://github.com/datalad/datalad-fuse
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad FUSE extension package
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
install_requires =
    aiohttp-retry ~= 2.8
    datalad >= 0.17.0
    fsspec[fuse,http] >= 2022.1.0, != 2022.10.0
    methodtools ~= 0.4.5
    typing_extensions; python_version < '3.10'
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = datalad_fuse*

[options.extras_require]
test =
    coverage~=6.0
    linesep~=0.2
    pytest
    requests~=2.20

[options.entry_points]
datalad.extensions =
    fuse = datalad_fuse:command_suite

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_fuse/_version.py
versionfile_build = datalad_fuse/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_fuse/_version.py

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
